--- a/index.html
+++ b/index.html
@@ -11,26 +11,32 @@
 </head>
 
 <body>
-    <header class="navigation container">
-        <a href=""><img src="./img/logo.svg" alt="Главная"></a>
-        <a href=""><img src="./img/contacts.svg" alt="Контакты"></a>
-    </header>
     <div class="wrapper">
-        <section class="first-block container">
-            <div class="header-text">
-                <p class="heading">New Automation
-                    Tool for Your </p>
-                <p class="smallText header-margin">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus
-                    elit.
-                </p>
-                <a href="#" class="header-button smallText">See Our Project</a>
+        <div class="container">
+            <div></div>
+            <div class="content">
+                <header class="navigation">
+                    <a href=""><img src="./img/logo.svg" alt="Главная"></a>
+                    <a href=""><img src="./img/contacts.svg" alt="Контакты"></a>
+                </header>
+                <section class="first-block">
+                    <div class="header-text">
+                        <p class="heading">New Automation
+                            Tool for Your </p>
+                        <p class="smallText header-margin">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus
+                            elit.
+                        </p>
+                        <a href="#" class="header-button smallText">See Our Project</a>
+                    </div>
+                    <div class="header-img">
+                        <img src="./img/illustration.svg" alt="" class="illustration">
+                    </div>
+                </section>
             </div>
-            <div class="header-img">
-                <img src="./img/illustration.svg" alt="" class="illustration">
-            </div>
-        </section>
+            <div></div>
+        </div>
     </div>
 </body>
 
