--- a/index.html
+++ b/index.html
@@ -5,39 +5,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css//index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/indexmedia.css">
     <title>Главная</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="container">
-            <div></div>
-            <div class="content">
-                <header class="navigation">
-                    <a href=""><img src="./img/logo.svg" alt="Главная"></a>
-                    <a href=""><img src="./img/contacts.svg" alt="Контакты"></a>
-                </header>
-                <section class="first-block">
-                    <div class="header-text">
-                        <p class="heading">New Automation
-                            Tool for Your </p>
-                        <p class="smallText header-margin">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus
-                            elit.
-                        </p>
-                        <a href="#" class="header-button smallText">See Our Project</a>
-                    </div>
-                    <div class="header-img">
-                        <img src="./img/illustration.svg" alt="" class="illustration">
-                    </div>
-                </section>
+    <section class="header">
+        <div class="wrapper-header">
+            <div class="container">
+                <div></div>
+                <div class="content">
+                    <header class="navigation">
+                        <a href=""><img src="./img/logo.svg" alt="Главная"></a>
+                        <a href=""><img src="./img/contacts.svg" alt="Контакты"></a>
+                    </header>
+                    <section class="first-block">
+                        <div class="header-info">
+                            <p class="heading">New Automation
+                                Tool for Your </p>
+                            <p class="smallText headerText header-margin">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio
+                                tellus
+                                elit.
+                            </p>
+                            <a href="#" class="header-button smallText">See Our Project</a>
+                        </div>
+                        <div class="header-img">
+                            <img src="./img/illustration.svg" alt="" class="illustration">
+                        </div>
+                    </section>
+                </div>
+                <div></div>
             </div>
-            <div></div>
         </div>
-    </div>
+    </section>
+    <section class="cards container">
+        <div></div>
+        <div class="content">
+            <p class="bigText cards-big-text">What we do to help our client grow in digital era</p>
+            <div class="cards-box">
+                <div class="card">
+                    <div class="wrapper-card">
+                        <img src="./img/card-1.svg" alt="photo" class="card-img">
+                        <div class="text">
+                            <p class="smallText card-bold-text">Make Your business To Be
+                                Better Famous In Internet</p>
+                            <p class="smallText card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="wrapper-card">
+                        <img src="./img/card-1.svg" alt="photo" class="card-img">
+                        <div class="text">
+                            <p class="smallText card-bold-text">Make Your business To Be
+                                Better Famous In Internet</p>
+                            <p class="smallText card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="wrapper-card">
+                        <img src="./img/card-1.svg" alt="photo" class="card-img">
+                        <div class="text">
+                            <p class="smallText card-bold-text">Make Your business To Be
+                                Better Famous In Internet</p>
+                            <p class="smallText card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div></div>
+    </section>
 </body>
 
 </html>
