--- a/index.html
+++ b/index.html
@@ -54,28 +54,40 @@
                                 Better Famous In Internet</p>
                             <p class="smallText card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                                 do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <div class="link-box">
+                                <a href="#" class="link">Learn more</a>
+                                <img src="./img/arrow.svg" alt="Стрелка">
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="wrapper-card">
-                        <img src="./img/card-1.svg" alt="photo" class="card-img">
+                        <img src="./img/card-2.svg" alt="photo" class="card-img">
                         <div class="text">
-                            <p class="smallText card-bold-text">Make Your business To Be
-                                Better Famous In Internet</p>
+                            <p class="smallText card-bold-text">Bring Technology To Your
+                                Comfrotable Home</p>
                             <p class="smallText card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                                 do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <div class="link-box">
+                                <a href="#" class="link">Learn more</a>
+                                <img src="./img/arrow.svg" alt="Стрелка">
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="wrapper-card">
-                        <img src="./img/card-1.svg" alt="photo" class="card-img">
+                        <img src="./img/card-3.svg" alt="photo" class="card-img">
                         <div class="text">
-                            <p class="smallText card-bold-text">Make Your business To Be
-                                Better Famous In Internet</p>
+                            <p class="smallText card-bold-text">Build Your Digital Product
+                                That Suitable For Your Need</p>
                             <p class="smallText card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                                 do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <div class="link-box">
+                                <a href="#" class="link">Learn more</a>
+                                <img src="./img/arrow.svg" alt="Стрелка">
+                            </div>
                         </div>
                     </div>
                 </div>
