create norm container

--- a/index.html
+++ b/index.html
@@ -14,37 +14,32 @@
     <section class="header">
         <div class="wrapper-header">
             <div class="container">
-                <div></div>
-                <div class="content">
-                    <header class="navigation">
-                        <a href=""><img src="./img/logo.svg" alt="Главная"></a>
-                        <a href=""><img src="./img/contacts.svg" alt="Контакты"></a>
-                    </header>
-                    <section class="first-block">
-                        <div class="header-info">
-                            <p class="heading">New Automation
-                                Tool for Your </p>
-                            <p class="smallText headerText header-margin">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio
-                                tellus
-                                elit.
-                            </p>
-                            <a href="#" class="header-button smallText">See Our Project</a>
-                        </div>
-                        <div class="header-img">
-                            <img src="./img/illustration.svg" alt="" class="illustration">
-                        </div>
-                    </section>
-                </div>
-                <div></div>
+                <header class="navigation">
+                    <a href=""><img src="./img/logo.svg" alt="Главная"></a>
+                    <a href=""><img src="./img/contacts.svg" alt="Контакты"></a>
+                </header>
+                <section class="first-block">
+                    <div class="header-info">
+                        <p class="heading">New Automation
+                            Tool for Your </p>
+                        <p class="smallText headerText header-margin">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio
+                            tellus
+                            elit.
+                        </p>
+                        <a href="#" class="header-button smallText">See Our Project</a>
+                    </div>
+                    <div class="header-img">
+                        <img src="./img/illustration.svg" alt="" class="illustration">
+                    </div>
+                </section>
             </div>
         </div>
     </section>
-    <section class="cards container">
-        <div></div>
-        <div class="content">
-            <p class="bigText cards-big-text">What we do to help our client grow in digital era</p>
+    <section class="cards">
+        <div class="container">
+            <p class="bigText center-big-text">What we do to help our client grow in digital era</p>
             <div class="cards-box">
                 <div class="card">
                     <div class="wrapper-card">
@@ -93,7 +88,6 @@
                 </div>
             </div>
         </div>
-        <div></div>
     </section>
 </body>
 
